--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,6 +5,7 @@ a {
 
 body {
   margin: 0 10px 10px 10px;
+  box-sizing: border-box;
 }
 
 .search-form {
@@ -15,11 +16,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50px;
+  height: 60px;
+  gap: 10px;
 
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  background-color: rgb(60, 197, 218);
+  background-color: rgb(130, 203, 214);
 }
 
 .gallery {
@@ -31,7 +33,7 @@ body {
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 60px;
+  padding-top: 70px;
 }
 
 .photo-card {
@@ -54,4 +56,23 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.input {
+  width: 264px;
+  height: 35px;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset,
+    rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+}
+
+.search-btn {
+  cursor: pointer;
+  border-radius: 4px;
+  height: 35px;
+  border: 1px solid transparent;
+  background-color: rgb(238, 238, 238);
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
